2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus/Makefile.am:
    * plugins/nautilus/seahorse.mime (removed):
    * plugins/nautilus/seahorse.keys (removed): Removed ancient mime support
    
2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>

    * Makefile.am:
    * configure.in:
    * HACKING:
    * bonobo/Makefile.am (removed):
    * bonobo/Seahorse_PGP_File_Listener.server.in.in (removed):
    * bonobo/seahorse-pgp-file-listener.c (removed): Remove the old nautilus
    context menu extension. Fixes #351874
    
2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c:
    * agent/seahorse-agent-ssh.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-passphrase.h:
    * libseahorse/seahorse-ssh-askpass.c:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h:
    * libseahorse/seahorse-ssh-generate.c: Rework the SSH passphrase prompting
    Fixes #351980
    
2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-widget.c: Don't keep key windows open when key is gone.
    * libseahorse/seahorse-widget.c: 
    * libseahorse/seahorse-widget.h: Don't destroy windows twice.
    * libseahorse/seahorse-ssh-source.c: Don't needlessly create new keys. 
    * libseahorse/seahorse-context.c: Better handling when keys go away
    
2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-entry.c: Use the proper GtkEntry style
    Fixes #351839
    
2006-08-18  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-service-source.c: Fix some critical warnings
    when filling in the 'Add Key Server' dialog.
    * libseahorse/seahorse-keyserver-control.c: Make appropriate selection 
    after deleting a key server, that was selected for publishing.
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-keyserver-results.c: