@@ -6,7 +6,7 @@
       <match type="string" value="-----BEGIN PGP MESSAGE-----" offset="0"/>
     </magic>
     <glob pattern="*.pgp"/>
-	<glob pattern="*.gpg"/>
+    <glob pattern="*.gpg"/>
     <glob pattern="*.asc"/>
   </mime-type>
 
@@ -14,13 +14,13 @@
     <magic priority="90">
       <match type="string" value="-----BEGIN PGP PUBLIC KEY BLOCK-----" offset="0"/>
       <match type="string" value="-----BEGIN PGP PRIVATE KEY BLOCK-----" offset="0"/>
-	  <match type="big16" value="0x9501" offset="0"/>
-	  <match type="big16" value="0x9500" offset="0"/>
-	  <match type="big16" value="0x9900" offset="0"/>
-	  <match type="big16" value="0x9901" offset="0"/>
+      <match type="big16" value="0x9501" offset="0"/>
+      <match type="big16" value="0x9500" offset="0"/>
+      <match type="big16" value="0x9900" offset="0"/>
+      <match type="big16" value="0x9901" offset="0"/>
     </magic>
     <glob pattern="*.skr"/>
-	<glob pattern="*.pkr"/>
+    <glob pattern="*.pkr"/>
   </mime-type>
 
   <mime-type type="application/pgp-signature">
@@ -29,6 +29,15 @@
       <match type="string" value="-----BEGIN PGP SIGNATURE-----" offset="0"/>
     </magic>
     <glob pattern="*.sig"/>
+  </mime-type>
+  
+  <mime-type type="application/ssh-key">
+    <magic priority="90">
+      <match type="string" value="ssh-dss " offset="0"/>
+      <match type="string" value="ssh-rsa " offset="0"/>
+      <match type="string" value="-----BEGIN RSA PRIVATE KEY-----" offset="0"/>
+      <match type="string" value="-----BEGIN DSA PRIVATE KEY-----" offset="0"/>
+    </magic>
   </mime-type>
   
 </mime-info>
