@@ -1,5 +1,14 @@
 2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-ssh-source.c:
+    * libseahorse/seahorse-util.c:
+    * libseahorse/seahorse-util.h:
+    * plugins/nautilus/seahorse.xml:
+    * src/seahorse-key-manager.c: Proper detection of file type before 
+    trying to import a key. Helps #351862
+    
+2006-08-19  Nate Nielsen  <nielsen@memberwebs.com>
+
     * plugins/nautilus/Makefile.am:
     * plugins/nautilus/seahorse.mime (removed):
     * plugins/nautilus/seahorse.keys (removed): Removed ancient mime support
